Weight paint brush is affected by radius unit option from sculpt mode #73080

Closed
opened 2020-01-13 09:06:58 +01:00 by Anoca · 7 comments

System Information
Operating system: Windows 7 SP1 64 bit

Blender Version
2.81a

Short description of error
The affected weight area doesn't respect the size of the weight brush from view

Exact steps for others to reproduce the error
Get a sphere ( or any object that has polygons on all directions), assign weights to it, go to sculpt mode, set radius unit to scene, go to weight paint mode, try painting the weights on a vertex group on the sphere.
The affected radius doesn't follow the size of the brush. The only way to fix it is by going back to sculpt mode and change radius unit back to view.
I feel like there was going to be a radius unit option for weight paint too.

**System Information** Operating system: Windows 7 SP1 64 bit **Blender Version** 2.81a **Short description of error** The affected weight area doesn't respect the size of the weight brush from view **Exact steps for others to reproduce the error** Get a sphere ( or any object that has polygons on all directions), assign weights to it, go to sculpt mode, set radius unit to scene, go to weight paint mode, try painting the weights on a vertex group on the sphere. The affected radius doesn't follow the size of the brush. The only way to fix it is by going back to sculpt mode and change radius unit back to view. I feel like there was going to be a radius unit option for weight paint too.
Author

Added subscriber: @Maker26

Added subscriber: @Maker26

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed

Confirmed
Pablo Dobarro was assigned by Campbell Barton 2020-01-13 09:33:02 +01:00

Removed subscriber: @ideasman42

Removed subscriber: @ideasman42

This issue was referenced by be691105c2

This issue was referenced by be691105c2adcd2bdc64aa7646cfe3fab8cb6fb7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73080
No description provided.